--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -4,42 +4,32 @@
 {% load static %}
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Pedidos Online</title>
-  <link rel="canonical" href="https://getbootstrap.com/docs/5.2/examples/cover/">
-  <link href={% static 'core/css/bootstrap.min.css' %} rel="stylesheet">
-  <!-- Custom styles for this template -->
-  <link href={% static 'core/css/cover.css' %} rel="stylesheet">
-  <link href={% static 'core/css/custom.css' %} rel="stylesheet">
-  
+  <link href={% static 'core/css/style.css' %} rel="stylesheet">  
 </head>
 
-<body class="d-flex h-100 text-center text-bg-secondary">
+<body>
+  <div class="contenido">
+    <header class="cabecera">
+      <div>
+        <h3 class="etiqueta">Pasteleria Gosu</h3>
+        <nav class="nav">
+          <a class="nav_link" aria-current="page" href={% url 'home' %}>Inicio</a>
+          <a class="nav_link" href={% url 'products' %}>Productos</a>
+          {% if request.user.is_authenticated %}
+            <a class="nav_link" href={% url 'exit' %}>Salir</a>
+          {% else %}
+            <a class="nav_link" href={% url 'login' %}>Ingresar</a>
+          {% endif %}
+        </nav>
+      </div>
+    </header>
 
-<div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
-  <header class="mb-auto">
-    <div>
-      <h3 class="float-md-start mb-0">Pasteleria Fina</h3>
-      <nav class="nav nav-masthead justify-content-center float-md-end">
-        <a class="nav-link fw-bold py-1 px-0 active" aria-current="page" href={% url 'home' %}>Inicio</a>
-        <a class="nav-link fw-bold py-1 px-0" href={% url 'products' %}>Productos</a>
-        {% if request.user.is_authenticated %}
-          <a class="nav-link fw-bold py-1 px-0" href={% url 'exit' %}>Salir</a>
-        {% else %}
-          <a class="nav-link fw-bold py-1 px-0" href={% url 'login' %}>Ingresar</a>
-        {% endif %}
-      </nav>
-    </div>
-  </header>
+    {% block content %}{% endblock %}
 
-  {% block content %}{% endblock %}
-
-  {% if request.user.is_authenticated %}
-    <a class="btn btn-outline-light" href={% url 'exit' %}>Cerrar Sesión</a>
-  {% endif %}
-
-  <footer class="mt-auto text-white-50">
-  </footer>
-</div>
-  </body>
+    {% if request.user.is_authenticated %}
+      <a class="cerrar_sesion" href={% url 'exit' %}>Cerrar Sesión</a>
+    {% endif %}
+  </div>
+</body>
 </html>
