--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -1,6 +1,6 @@
 {% extends 'core/base.html' %}
 {% block content %}
-  <main class="px-3">
+  <main class="nombre_empresa">
     <h1>Pastelería Fina</h1>
 
     {% if request.user.is_authenticated %}
@@ -14,7 +14,7 @@
     {% endif %}
 
     <p class="lead">
-      <a href="#" class="btn btn-lg btn-secondary fw-bold border-white bg-white">Acerca de Nosotros...</a>
+      <a href="#" class="acerca">Acerca de Nosotros...</a>
     </p>
   </main>
 {% endblock %}
