--- a/core/templates/registration/login.html
+++ b/core/templates/registration/login.html
@@ -3,27 +3,22 @@
 {% load static %}
 
 {% block content %}
-<main class="form-signin w-100 m-auto">
+<main class="formulario">
   <form action="" method="post">
     {% csrf_token %}
-    <img class="mb-4" src={% static 'core/images/bootstrap-logo.svg' %} alt="" width="72" height="57">
-    <h1 class="h3 mb-3 fw-normal">Iniciar Sesión</h1>
+    <img class="imagen" src={% static 'core/images/logo.webp' %}>
+    <h1>Iniciar Sesión</h1>
 
-    <div class="mb-3">
-      <label for="exampleInputEmail1" class="form-label float-md-start">Nombre de Usuario</label>
-      <input type="text" class="form-control" name="username" id="exampleInputEmail1">
+    <div class="ingresar_datos">
+      <label for="exampleInputEmail1" class="etiqueta">Nombre de Usuario</label>
+      <input type="text" class="input" name="username" id="exampleInputEmail1">
     </div>
-    <div class="mb-3">
-      <label for="exampleInputPassword1" class="form-label float-md-start">Contraseña</label>
-      <input type="password" class="form-control" name="password" id="exampleInputPassword1">
+    <div class="ingresar_datos">
+      <label for="exampleInputPassword1" class="etiqueta">Contraseña</label>
+      <input type="password" class="input" name="password" id="exampleInputPassword1">
     </div>
 
-    <button class="w-100 btn btn-lg btn-primary" type="submit">Iniciar Sesión</button>
-    <p class="mt-5 mb-3 text-muted">&copy; 2022</p>
+    <button class="boton_inicio_sesion" type="submit">Iniciar Sesión</button>
   </form>
 </main>
-
-
-
-
-  {% endblock %}
+{% endblock %}
